tdf#107700 Translate some less common font style names

These are used in at least on of the free fonts we bundle.
Also translate a stray German comment :)

Change-Id: I3f4d83001bcfc3a8b3d490e56d9e538a8d892f0c